# django-versions

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: prosnet.yml  release-please.yml
django_versions/: views.py
