[tool.poetry]
name = "django-versions"
version = "0.2.0"
description = "Provide an Django view that lists installed package versions"
authors = ["Birger Schacht <birger@rantanplan.org>"]
readme = "README.md"
packages = [{include = "django_versions"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.289"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
